--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@
   border-radius: 1rem;
   position: absolute;
   bottom: -2rem;
+  z-index: 2;
 }
 .card-image {
   display: flex;
@@ -33,10 +34,23 @@
   justify-content: center;
   height: 40rem;
 }
+.card-image-object-2 {
+  min-width: 100%;
+  min-height: 100%;
+  position: absolute;
+  padding: 1rem;
+  display: none;
+  border-radius: 1rem;
+  background-size: 90% 80%;
+  background-repeat: no-repeat;
+  background-position: center 5rem;
+}
+
 .card-image-object {
   display: flex;
   width: 32rem;
   height: 40rem;
+
   background-size: 100% 80%;
   background-repeat: no-repeat;
   background-position: 0 5rem;
@@ -50,6 +64,7 @@
   gap: 1rem;
   position: absolute;
   top: -2rem;
+  z-index: 2;
 }
 .card-types-box {
   background-color: white;
@@ -59,6 +74,32 @@
 }
 .card-type-icon {
   width: 4rem;
+  border-radius: 100%;
+  padding: 0.8rem;
+  border: 3px solid white;
+  box-sizing: content-box;
+}
+
+.card-types-2 {
+  display: none;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+  position: absolute;
+  top: -3.5rem;
+  right: -0.6rem;
+  z-index: 2;
+}
+.card-types-box-2 {
+  padding: 0.5rem 0.5rem;
+  box-sizing: content-box;
+  border-radius: 6rem;
+  display: flex;
+  gap: 1.5rem;
+}
+.card-type-icon-2 {
+  background-color: white;
+  width: 5rem;
   border-radius: 100%;
   padding: 0.8rem;
   border: 3px solid white;
