--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -395,3 +395,19 @@ button#search-id-btn {
 .dragon-icon-bg {
   background-color: var(--dragon);
 }
+footer {
+  display: flex;
+  background-color: #000;
+  height: 10vh;
+  color: white;
+  font-size: 2rem;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 0;
+  width:100%;
+  z-index:100;
+}
+footer a {
+  color: white;
+}
