--- a/assets/css/td-widget.css
+++ b/assets/css/td-widget.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@500;600&display=swap");
 :root {
   --linkedin-color: #0a66c2;
   --github-color: #181717;
@@ -17,6 +18,9 @@
   z-index: 100;
   bottom: 0;
   transition: all 0.5s cubic-bezier(0.4, 0, 1, 1);
+}
+#td-widget * {
+  font-family: "Comfortaa", cursive;
 }
 .td-item {
   font-size: 2rem;
@@ -51,9 +55,10 @@
 
 .td-powered {
   display: flex;
+  gap: 1rem;
   align-items: center;
   background-color: var(--powered-hover);
-  font-size: 2rem;
+  font-size: 1.7rem;
   color: white;
   min-height: 6rem;
   padding: 0 3rem;
@@ -62,8 +67,8 @@
   color: white;
 }
 .td-powered-icon {
-  width: 4rem;
-  height: 4rem;
+  width: 3rem;
+  height: 3rem;
 }
 
 /* CODE */
