--- a/assets/css/td-widget.css
+++ b/assets/css/td-widget.css
@@ -26,7 +26,7 @@
   font-size: 2rem;
   align-items: center;
   display: flex;
-  max-height: 9vh;
+  max-height: 10rem;
   transition: all 0.5s cubic-bezier(0.4, 0, 1, 1);
 }
 .td-item a,
@@ -40,8 +40,7 @@
   align-items: center;
   justify-content: center;
   padding: 2rem;
-  max-width: 7rem;
-  min-height: 7rem;
+  min-height: 2rem;
 }
 .td-icon-img {
   width: 4rem;
